impl. working post editor w/ redirect on submit fixed authentication issue by wrapping [slug].js contents in AuthChecker

--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -38,6 +38,10 @@ a {
   box-sizing: border-box;
 }
 
+.hidden {
+  display: none;
+}
+
 /*Navbar*/
 
 .navbar {
